--- a/game.html
+++ b/game.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../../../portfolio/rquote/logo/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="/logo/favicon.ico" type="image/x-icon">  
 </head>
 <body>
     <div class="main-container">
         <div class="title">
-            <img id="logo" style="width:100px;height:100px;" src="../../../portfolio/rquote/logo/logo.png">
+            <img id="logo" style="width:100px;height:100px;" src="/logo/logo.png">
             <h2>Random Quote Generator</h2>
         </div>
         <div class="quote-container">
@@ -32,7 +32,7 @@
             </form> 
         </div>
         <!-- Buttons -->
-        <button title="🏠 Go to Homepage." onclick="document.location='../../../portfolio/rquote/index.html'" id="back-button">Back</button>
+        <button title="🏠 Go to Homepage." onclick="document.location='/index.html'" id="back-button">Back</button>
         <button title="🔄 Refreshes the page." id="reset-button">Reset</button>
         <button title="🏃‍♂️ Starts the game." id="start-game-button">Start</button>
         <button title="📝 Submit your answer." id="submit-button">Submit</button>
@@ -42,6 +42,9 @@
         <p id="question"></p>
         <p id="totalQuotes"><b>You have answered <span id="display">0</span> Quotes so far.</b></p>
         <p id=show-results>Results: Correct: <span id="correctResults"></span> - Wrong: <span id="wrongResults"></span></p>
+    </div>
+    <div class="about-item">
+        Created with ❤️ and Enthusiasm by <a href="https://github.com/mariosdaskalas" target="_blank"><span>@mariosdaskalas</span></a>
     </div>
 </body>
 <script src="game.js"></script>
