--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../../../portfolio/rquote/logo/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="/logo/favicon.ico" type="image/x-icon">  
 </head>
 <body>
     <div class="main-container">
         <div class="title">
-            <img id="logo" style="width:100px;height:100px;" src="../../../portfolio/rquote/logo/logo.png">
+            <img id="logo" style="width:100px;height:100px;" src="/logo/logo.png">
             <h2>Random Quote Generator</h2>
         </div>
         <!-- Display data -->
@@ -35,9 +35,12 @@
     <div class="outer-container">
         <button title="🕵️ Press me to see what happens." id="mystery-button">Mystery Quote</button>
         <button title="🍀 Generate a random Quote!" id="generate-button">Generate</button>
-        <button onclick="document.location='../../../portfolio/rquote/game.html'" title="🎲 Game ON!" class="game-button">Game</button>
+        <button onclick="document.location='/game.html'" title="🎲 Game ON!" class="game-button">Game</button>
         <button title="🔄 Refreshes the page." id="reset-button">Reset</button>
         <p id="show-clicked"><b>This Button Clicked <span id="display">0</span> Times</b><b><span id="record"></span></b></p>
+    </div>
+    <div class="about-item">
+        Created with ❤️ and Enthusiasm by <a href="https://github.com/mariosdaskalas" target="_blank"><span>@mariosdaskalas</span></a>
     </div>
 </body>
 <script src="main.js"></script>
