Change relative path

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-container">
         <div class="title">
-            <img id="logo" style="width:100px;height:100px;" src="/logo/logo.png">
+            <img id="logo" style="width:100px;height:100px;" src="./logo/logo.png">
             <h2>Random Quote Generator</h2>
         </div>
         <!-- Display data -->
