Change relative paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/logo/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="./logo/favicon.ico" type="image/x-icon">  
 </head>
 <body>
     <div class="main-container">
@@ -35,7 +35,7 @@
     <div class="outer-container">
         <button title="🕵️ Press me to see what happens." id="mystery-button">Mystery Quote</button>
         <button title="🍀 Generate a random Quote!" id="generate-button">Generate</button>
-        <button onclick="document.location='/game.html'" title="🎲 Game ON!" class="game-button">Game</button>
+        <button onclick="document.location='./game.html'" title="🎲 Game ON!" class="game-button">Game</button>
         <button title="🔄 Refreshes the page." id="reset-button">Reset</button>
         <p id="show-clicked"><b>This Button Clicked <span id="display">0</span> Times</b><b><span id="record"></span></b></p>
     </div>
